--- a/.github/workflows/update-checker-ap.yml
+++ b/.github/workflows/update-checker-ap.yml
@@ -9,7 +9,7 @@
 # Description: Source code update checker
 #
 
-name: Update Checker
+name: Update Checker AP
 
 env:
   REPO_URL: https://github.com/x-wrt/x-wrt
